k8s/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: mlops-a2
spec:
  selector:
    app: auth-service
  ports:
    - port: 4000       # ClusterIP port
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: mlops-a2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: app
          image: auth-service:1.0
          ports:
            - containerPort: 4000
