k8s/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: mlops-a2
spec:
  selector:
    app: frontend
  ports:
    - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: mlops-a2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: app
          image: frontend:1.0
          ports:
            - containerPort: 80
