k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: mlops-a2
spec:
  rules:
  - host: frontend.local
    http:
      paths:
      - path: /
        pathType: Prefix        # matches / and /assets/…
        backend:
          service:
            name: frontend
            port:
              number: 80

  - host: auth-service.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 4000

  - host: counter-service.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: counter-service
            port:
              number: 4001
